--- a/package.json
+++ b/package.json
@@ -12,5 +12,15 @@
     "chalk": "^0.5.1",
     "lodash": "^3.1.0",
     "phantomas": "^1.9.0"
+  },
+  "devDependencies": {
+    "chai": "^1.10.0",
+    "grunt": "^0.4.5",
+    "grunt-contrib-jshint": "^0.11.0",
+    "grunt-jscs": "^1.5.0",
+    "grunt-mocha-test": "^0.12.7",
+    "jshint-stylish": "^1.0.0",
+    "mocha": "^2.1.0",
+    "proxyquire": "^1.3.1"
   }
 }
