--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "description": "A grunt plugin for asserting against phantomas metrics",
   "repository": "https://github.com/wmonk/grunt-phantomas-perf",
-  "main": "tasks/perf.js",
+  "main": "tasks/phantomasPerf.js",
   "author": "",
   "license": "ISC",
   "dependencies": {
